--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <!-- Footer Section -->
     <footer class="bg-dark text-light mt-5">
         <div class="container">
-            <p>&copy; Football Club 2023. Created on DATE by Your Name</p>
+            <p>&copy; Football Club 2023. Created on 12/11/2023 by Andres & Alejandro Garzon</p>
             <p id="timestamp"></p> <!-- JavaScript timestamp will be placed here -->
         </div>
     </footer>
@@ -159,7 +159,7 @@
     <script>
         // JavaScript function to open popup
         function openPopup() {
-            alert('This is a popup!');
+            alert('"Kick doubt out of the game, score your goals of determination, and let the passion for soccer be the fuel that drives your relentless pursuit of greatness!"');
         }
 
         // JavaScript function to generate timestamp
