creation about page, fix index
fix the size of the sliding, in index

--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
 
     <!-- Content Section -->
     <div class="container mt-5">
-        <h1>Welcome to AGD FC!</h1>
-        <p>
-            AGD FC is not just a football club; it's a pathway for young soccer enthusiasts to embark on a journey towards professional excellence. <br>
-             Designed specifically for the vibrant and aspiring youth, AGD FC is your gateway to the thrilling world of soccer and the pursuit of <br>
-             playing in top-tier leagues
-        </p>
+        <div class="row">
+            <div class="col-lg-8 offset-lg-2 text-center">
+                <h1 class="display-4 mb-4">Welcome to AGD FC!</h1>
+                <p class="lead">
+                    AGD FC is more than just a football club; it's a journey for young soccer enthusiasts to strive for professional excellence. Designed specifically for the vibrant and aspiring youth, AGD FC serves as your gateway to the exhilarating world of soccer, guiding you towards the pursuit of playing in top-tier leagues.
+                </p>
+            </div>
+        </div>
+    </div>
 
         <!-- Image Slider Section -->
     <div id="imageSlider" class="carousel slide" data-ride="carousel">
@@ -88,32 +91,53 @@
     </div>
 
         <section>
-            <h2>Why Choose AGD FC?</h2>
+            <div class="container mt-5">
+                <div class="row">
+                    <div class="col-md-12 text-center mb-4">
+                        <h2 class="title-gradient">Why Choose AGD FC?</h2>
+                    </div>
 
-            <ol>
-                <li>
-                    <strong>Expert Coaching:</strong> Our coaching staff comprises experienced professionals dedicated to
-                    shaping the next generation of soccer stars. Through strategic training programs, we focus on enhancing
-                    technical proficiency, tactical awareness, and overall athletic performance.
-                </li>
-
-                <li>
-                    <strong>Pathway to Professional Leagues:</strong> AGD FC serves as a stepping stone for those with
-                    ambitions to play in prestigious leagues like the MLS. We provide the necessary guidance and exposure
-                    to catapult your soccer journey to the highest echelons of the sport.
-                </li>
-
-                <li>
-                    <strong>Youth-Centric Approach:</strong> We understand the unique needs of young players. Our training
-                    sessions are not only geared towards skill development but also emphasize the importance of teamwork,
-                    leadership, and sportsmanship.
-                </li>
-
-                <li>
-                    <strong>State-of-the-Art Facilities:</strong> AGD FC offers top-notch training facilities equipped
-                    with cutting-edge technology to create an optimal learning environment for our players.
-                </li>
-            </ol>
+            <body>
+                <div class="container mt-5">
+                    <div class="row">
+                        <div class="col-md-3 mb-4">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <i class="fas fa-chalkboard-teacher fa-4x mb-3"></i>
+                                    <h5 class="card-title">Expert Coaching</h5>
+                                    <p class="card-text">Our coaching staff comprises experienced professionals dedicated to shaping the next generation of soccer stars.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-4">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <i class="fas fa-flag fa-4x mb-3"></i>
+                                    <h5 class="card-title">Pathway to Professional Leagues</h5>
+                                    <p class="card-text">AGD FC serves as a stepping stone for those with ambitions to play in prestigious leagues like the MLS.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-4">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <i class="fas fa-users fa-4x mb-3"></i>
+                                    <h5 class="card-title">Youth-Centric Approach</h5>
+                                    <p class="card-text">We understand the unique needs of young players, emphasizing teamwork, leadership, and sportsmanship.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-4">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <i class="fas fa-building fa-4x mb-3"></i>
+                                    <h5 class="card-title">State-of-the-Art Facilities</h5>
+                                    <p class="card-text">AGD FC offers top-notch training facilities equipped with cutting-edge technology.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
 
         <!-- Add more content here -->
