fill news web part
.

--- a/Fans.html
+++ b/Fans.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Club</title>
+    <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Font Awesome CDN for icons -->
@@ -54,6 +55,83 @@
     </nav>
 
     
+    <section id="fans" class="container mt-5">
+        <h2>Fans</h2>
+        <p>Welcome to our vibrant community of passionate fans! At AGD FC, we value and appreciate the support and enthusiasm of our fans. Whether you're cheering from the stands, following us on social media, or engaging with our content, your dedication drives us forward.</p>
+        <p>Our fans are the heartbeat of our organization, and we're committed to creating an inclusive and exciting experience for all of you. From exclusive behind-the-scenes content to live events and meet-ups, we strive to make every moment memorable for our fans.</p>
+        <!-- Add more content, images, or fan-related information -->
+    </section>
+
+        <!-- Fans Section -->
+        <section>
+            <h2></h2>
+            <div class="row">
+                <!-- Fan 1 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="fan1.jpg" class="card-img-top" alt="Fan 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Fan 1</h5>
+                            <p class="card-text"> "Meet Sarah, a dedicated supporter since day one! Her unwavering passion for the team and infectious energy light up every game day."</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Fan 2 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="fan2.jpg" class="card-img-top" alt="Fan 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Fan 2</h5>
+                            <p class="card-text">"John, our loyal fan, has been following the team for years. His commitment and enthusiasm inspire both players and fellow fans alike."</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Fan 3 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="fan3.jpg" class="card-img-top" alt="Fan 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Fan 3</h5>
+                            <p class="card-text">"Emily, the ultimate team spirit, embodies the heart and soul of our fan community. Her positive vibes and dedication uplift everyone around her."</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add more fans as needed -->
+            </div>
+        </section>
+    </div>
+
+
+
+
+     <!-- Image Slider Section -->
+     <div id="imageSlider" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="cover.png" class="d-block w-100" alt="Slide 1">
+            </div>
+            <div class="carousel-item">
+                <img src="default.png" class="d-block w-100" alt="Slide 2">
+            </div>
+            <div class="carousel-item">
+                <img src="profile.png" class="d-block w-100" alt="Slide 2">
+            </div>
+            <!-- Add more slides as needed -->
+        </div>
+        <a class="carousel-control-prev" href="#imageSlider" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#imageSlider" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <script src="script.js"></script>
+
+
+
 
 
 
