--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Club</title>
+    <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Font Awesome CDN for icons -->
@@ -57,7 +58,7 @@
 
     
 
-                <!-- Bootstrap CSS link -->
+    <!-- Bootstrap CSS link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Font Awesome CDN for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -90,12 +91,12 @@
                 <div class="col-md-6 about-content">
                     <h2 class="mt-4">About Football Club</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus aliquam urna eget neque volutpat, sit amet varius est volutpat.
-                        Curabitur fermentum quam in orci tincidunt scelerisque. Duis volutpat lacus ut ex accumsan, sit amet sollicitudin odio tempor.
+                        Welcome to the vibrant world of our Football Club! We are more than just a team; we are a 
+                        community united by the love and passion for the beautiful game. Our journey began with a simple goal: 
+                        to create a space where every player could grow, learn, and thrive.
                     </p>
                     <p>
-                        Sed consectetur, eros a mollis eleifend, felis arcu consequat tortor, vel ultrices enim felis id ex. Integer a odio nec augue
-                        viverra placerat.
+                        
                     </p>
                 </div>
     <!-- About Section -->
@@ -118,35 +119,34 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-lg-4 mb-4">
-            <div class="card about-card">
-                <div class="card-body text-center">
+            <div class="card about-card text-center">
+                <div class="card-body">
                     <i class="fas fa-info-circle fa-4x mb-3"></i>
                     <h5 class="card-title">About Us</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="card-text">Welcome to our community! At Football Club, we're dedicated to fostering a love for the sport and nurturing aspiring talents. Our journey is defined by passion, dedication, and a shared commitment to excellence.</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 mb-4">
-            <div class="card about-card">
-                <div class="card-body text-center">
+            <div class="card about-card text-center">
+                <div class="card-body">
                     <i class="fas fa-laptop-code fa-4x mb-3"></i>
                     <h5 class="card-title">Our Services</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="card-text">Our services are tailored to empower players of all levels. From professional coaching to state-of-the-art facilities, we provide the tools and environment for growth, skill development, and a pathway to success.</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 mb-4">
-            <div class="card about-card">
-                <div class="card-body text-center">
+            <div class="card about-card text-center">
+                <div class="card-body">
                     <i class="fas fa-globe fa-4x mb-3"></i>
                     <h5 class="card-title">Our Website</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="card-text">Explore our website to discover the latest news, upcoming events, player profiles, and exclusive content. Join our thriving community and stay updated on all things Football Club!</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 <!-- ... Your other content -->
 
