--- a/index.html
+++ b/index.html
@@ -150,8 +150,13 @@
         
 
         <!-- Button to trigger dialog/popup box -->
-        <button class="btn btn-primary" onclick="openPopup()">Open Popup</button>
-    </div>
+        <div class="container mt-5">
+            <!-- Button to trigger dialog/popup box -->
+            <div class="text-center">
+                <button class="btn btn-primary" onclick="openPopup()">Open Popup</button>
+            </div>
+        </div>
+        </div>
 
     <!-- Bootstrap Pager -->
     <nav aria-label="Page navigation example" class="mt-3">
