about and fans part done

--- a/Fans.html
+++ b/Fans.html
@@ -69,19 +69,19 @@
                 <!-- Fan 1 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="fan1.jpg" class="card-img-top" alt="Fan 1">
+                        <img src="kidfan.jpeg" class="card-img-top" alt="Fan 1">
                         <div class="card-body">
-                            <h5 class="card-title">Fan 1</h5>
-                            <p class="card-text"> "Meet Sarah, a dedicated supporter since day one! Her unwavering passion for the team and infectious energy light up every game day."</p>
+                            <h5 class="card-title"></h5>
+                            <p class="card-text"> "Meet alex and his son, a dedicated supporter since day one! Her unwavering passion for the team and infectious energy light up every game day."</p>
                         </div>
                     </div>
                 </div>
                 <!-- Fan 2 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="fan2.jpg" class="card-img-top" alt="Fan 2">
+                        <img src="man.jpeg" class="card-img-top" alt="Fan 2">
                         <div class="card-body">
-                            <h5 class="card-title">Fan 2</h5>
+                            <h5 class="card-title"></h5>
                             <p class="card-text">"John, our loyal fan, has been following the team for years. His commitment and enthusiasm inspire both players and fellow fans alike."</p>
                         </div>
                     </div>
@@ -89,9 +89,9 @@
                 <!-- Fan 3 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="fan3.jpg" class="card-img-top" alt="Fan 3">
+                        <img src="boyfan.jpeg" class="card-img-top" alt="Fan 3">
                         <div class="card-body">
-                            <h5 class="card-title">Fan 3</h5>
+                            <h5 class="card-title"></h5>
                             <p class="card-text">"Emily, the ultimate team spirit, embodies the heart and soul of our fan community. Her positive vibes and dedication uplift everyone around her."</p>
                         </div>
                     </div>
@@ -108,13 +108,16 @@
      <div id="imageSlider" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="cover.png" class="d-block w-100" alt="Slide 1">
+                <img src="girlfan.jpeg" class="d-block w-100" alt="Slide 1">
             </div>
             <div class="carousel-item">
-                <img src="default.png" class="d-block w-100" alt="Slide 2">
+                <img src="inchada.jpeg" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="profile.png" class="d-block w-100" alt="Slide 2">
+                <img src="court.jpeg" class="d-block w-100" alt="Slide 2">
+            </div>
+            <div class="carousel-item">
+                <img src="fanssunset.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <!-- Add more slides as needed -->
         </div>
