--- a/Tickets.html
+++ b/Tickets.html
@@ -420,20 +420,21 @@ h1 {
         </section>
     </main> -->
 
-    </div> -->
+    </div> 
 
-    <!-- Bootstrap Pager -->
-    <nav aria-label="Page navigation example" class="mt-3">
-        <ul class="pagination justify-content-center">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="index.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="about.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="Fans.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="news.html">4</a></li>
-            <li class="page-item"><a class="page-link" href="Tickets.html">5</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>
-    </nav>
+<!-- Bootstrap Pager -->
+<nav aria-label="Page navigation example" class="mt-3">
+    <ul class="pagination justify-content-center">
+        <li class="page-item"><a class="page-link" href="news.html">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="index.html">1</a></li>
+        <li class="page-item"><a class="page-link" href="about.html">2</a></li>
+        <li class="page-item"><a class="page-link" href="Fans.html">3</a></li>
+        <li class="page-item"><a class="page-link" href="news.html">4</a></li>
+        <li class="page-item"><a class="page-link" href="Tickets.html">5</a></li>
+        <li class="page-item"><a class="page-link" href="index.html">Next</a></li>
+    </ul>
+</nav>
+
 
     <!-- Footer Section -->
     <footer class="bg-dark text-light mt-5">
