last part - alejo

--- a/Fans.html
+++ b/Fans.html
@@ -119,6 +119,12 @@
             <div class="carousel-item">
                 <img src="fanssunset.webp" class="d-block w-100" alt="Slide 2">
             </div>
+            <div class="carousel-item">
+                <img src="fondo2.webp" class="d-block w-100" alt="Slide 2">
+            </div>
+            <div class="carousel-item">
+                <img src="fondo4.webp" class="d-block w-100" alt="Slide 2">
+            </div>
             <!-- Add more slides as needed -->
         </div>
         <a class="carousel-control-prev" href="#imageSlider" role="button" data-slide="prev">
