--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 
 
 
-
+<body>
 <div class="container mt-5">
     <div class="row">
         <div class="col-lg-4 mb-4">
@@ -147,7 +147,7 @@
         </div>
     </div>
 </div>
-
+</body>
 <!-- ... Your other content -->
 
 
