--- a/news.html
+++ b/news.html
@@ -53,15 +53,13 @@
         </div>
     </nav>
 
-
-
     <style>
         .card:hover {
             transform: scale(1.05);
             transition: transform 0.3s ease-in-out;
         }
     </style>
-
+<body>
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -110,6 +108,8 @@
             </div>
         </div>
     </div>
+</body>
+    
     
 
 
