--- a/Tickets.html
+++ b/Tickets.html
@@ -357,7 +357,7 @@ h1 {
         </div>
         <div class="even-info">
           <i class="fa fa-map-marker"></i>
-          <p>MetLife Stadium, East Rutherford NJ</p>
+          <p>MetLife Stadium <br>East Rutherford NJ</p>
         </div>
         <a href="#">Get</a>
       </section>
@@ -389,51 +389,20 @@ h1 {
   </div>
 </section>
 
+<section class="container mt-5">
+    <!-- ... Your existing content ... -->
 
-
-    <!-- <div class="container mt-5">
-     <main>
-
-        <div class="container mt-5 text-center">
-    <h1 class="mb-4">AGD FC Tickets</h1>
-    <p>Your Gateway to Exciting Matches</p>
-
-    
-    </div>
-
-        <section>
-            <h2>Upcoming Matches</h2>
-            <!-- Add details about upcoming matches and ticket information -->
-            <!-- <p>Get ready for thrilling matches with AGD FC! Purchase your tickets now.</p>
-        </section>
-
-        <section>
-            <h2>Ticket Options</h2> -->
-            <!-- Include information about different ticket options, pricing, and how to purchase -->
-            <!-- <p>Explore our ticket options and find the best seats to witness the action live!</p>
-        </section>
-
-        <section>
-            <h2>Season Tickets</h2> -->
-            <!-- Provide details about season ticket packages and benefits -->
-            <!-- <p>Become a season ticket holder for exclusive perks and a season full of unforgettable moments.</p>
-        </section>
-    </main> -->
-
-    </div> 
-
-<!-- Bootstrap Pager -->
-<nav aria-label="Page navigation example" class="mt-3">
-    <ul class="pagination justify-content-center">
-        <li class="page-item"><a class="page-link" href="news.html">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="index.html">1</a></li>
-        <li class="page-item"><a class="page-link" href="about.html">2</a></li>
-        <li class="page-item"><a class="page-link" href="Fans.html">3</a></li>
-        <li class="page-item"><a class="page-link" href="news.html">4</a></li>
-        <li class="page-item"><a class="page-link" href="Tickets.html">5</a></li>
-        <li class="page-item"><a class="page-link" href="index.html">Next</a></li>
-    </ul>
-</nav>
+    <!-- Bootstrap Pager -->
+    <nav aria-label="Page navigation example" class="mt-3">
+        <ul class="pagination justify-content-center">
+            <li class="page-item"><a class="page-link" href="#section1">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="#section1">1</a></li>
+            <li class="page-item"><a class="page-link" href="#section2">2</a></li>
+            <!-- Add similar links for other sections -->
+            <li class="page-item"><a class="page-link" href="#section2">Next</a></li>
+        </ul>
+    </nav>
+</section>
 
 
     <!-- Footer Section -->
