--- a/Fans.html
+++ b/Fans.html
@@ -92,7 +92,7 @@
                         <img src="boyfan.jpeg" class="card-img-top" alt="Fan 3">
                         <div class="card-body">
                             <h5 class="card-title"></h5>
-                            <p class="card-text">"Emily, the ultimate team spirit, embodies the heart and soul of our fan community. Her positive vibes and dedication uplift everyone around her."</p>
+                            <p class="card-text">"Rick, the ultimate team spirit, embodies the heart and soul of our fan community. Her positive vibes and dedication uplift everyone around her."</p>
                         </div>
                     </div>
                 </div>
@@ -139,6 +139,20 @@
 
     <script src="script.js"></script>
 
+    <!-- Testimonials Form -->
+<section id="testimonials" class="container mt-5">
+    <h2>Testimonials</h2>
+    <form action="#" method="post" id="testimonialForm">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="testimonial">Testimonial:</label>
+            <textarea class="form-control" id="testimonial" name="testimonial" rows="3" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
 <!-- Bootstrap Pager -->
 <nav aria-label="Page navigation example" class="mt-3">
