nav barr correction

--- a/Fans.html
+++ b/Fans.html
@@ -10,6 +10,9 @@
     <!-- Font Awesome CDN for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- Custom CSS -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
     <style>
         /* Add your custom styles here */
         body {
@@ -163,6 +166,15 @@
             <p>&copy; Football Club 2023. Created on 12/11/2023 by Andres & Alejandro Garzon</p>
             <p id="timestamp"></p> <!-- JavaScript timestamp will be placed here -->
         </div>
+
+        <div class="col-md-6 text-right">
+                <!-- Add your social media icons here -->
+                <a href="#" class="text-light"><i class="fab fa-facebook-f fa-lg mx-2"></i></a>
+                <a href="#" class="text-light"><i class="fab fa-twitter fa-lg mx-2"></i></a>
+                <a href="#" class="text-light"><i class="fab fa-instagram fa-lg mx-2"></i></a>
+                <!-- Add more social media icons as needed -->
+            </div>
+            
     </footer>
 
     <!-- jQuery CDN -->
