--- a/Tickets.html
+++ b/Tickets.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Font Awesome CDN for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
     <!-- Custom CSS -->
     <style>
         body {
@@ -393,6 +396,15 @@
             <p>&copy; Football Club 2023. Created on 12/11/2023 by Andres & Alejandro Garzon</p>
             <p id="timestamp"></p> <!-- JavaScript timestamp will be placed here -->
         </div>
+
+        <div class="col-md-6 text-right">
+                <!-- Add your social media icons here -->
+                <a href="#" class="text-light"><i class="fab fa-facebook-f fa-lg mx-2"></i></a>
+                <a href="#" class="text-light"><i class="fab fa-twitter fa-lg mx-2"></i></a>
+                <a href="#" class="text-light"><i class="fab fa-instagram fa-lg mx-2"></i></a>
+                <!-- Add more social media icons as needed -->
+            </div>
+
     </footer>
 
     <!-- jQuery CDN -->
