--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
     <!-- Font Awesome CDN for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- Custom CSS -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
     <style>
         /* Add your custom styles here */
         body {
@@ -30,6 +33,10 @@
             <img src="cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
             
         </a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
         <!-- Add your navigation links, dropdowns, etc. here -->
         <!-- Example: -->
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -190,6 +197,15 @@
             <p>&copy; Football Club 2023. Created on 12/11/2023 by Andres & Alejandro Garzon</p>
             <p id="timestamp"></p> <!-- JavaScript timestamp will be placed here -->
         </div>
+
+        <div class="col-md-6 text-right">
+                <!-- Add your social media icons here -->
+                <a href="#" class="text-light"><i class="fab fa-facebook-f fa-lg mx-2"></i></a>
+                <a href="#" class="text-light"><i class="fab fa-twitter fa-lg mx-2"></i></a>
+                <a href="#" class="text-light"><i class="fab fa-instagram fa-lg mx-2"></i></a>
+                <!-- Add more social media icons as needed -->
+            </div>
+
     </footer>
 
     <!-- jQuery CDN -->
