--- a/Tickets.html
+++ b/Tickets.html
@@ -248,6 +248,10 @@
             <!-- Link your franchise logo image here -->
             <img src="cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
         </a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
         <!-- Add your navigation links, dropdowns, etc. here -->
         <!-- Example: -->
         <div class="collapse navbar-collapse" id="navbarNav">
