--- a/Fans.html
+++ b/Fans.html
@@ -33,6 +33,10 @@
             <img src="cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
             
         </a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
         <!-- Add your navigation links, dropdowns, etc. here -->
         <!-- Example: -->
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -95,7 +99,7 @@
                         <img src="boyfan.jpeg" class="card-img-top" alt="Fan 3">
                         <div class="card-body">
                             <h5 class="card-title"></h5>
-                            <p class="card-text">"Rick, the ultimate team spirit, embodies the heart and soul of our fan community. Her positive vibes and dedication uplift everyone around her."</p>
+                            <p class="card-text">"Emily, the ultimate team spirit, embodies the heart and soul of our fan community. Her positive vibes and dedication uplift everyone around her."</p>
                         </div>
                     </div>
                 </div>
@@ -142,20 +146,6 @@
 
     <script src="script.js"></script>
 
-    <!-- Testimonials Form -->
-<section id="testimonials" class="container mt-5">
-    <h2>Testimonials</h2>
-    <form action="#" method="post" id="testimonialForm">
-        <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" class="form-control" id="name" name="name" required>
-        </div>
-        <div class="form-group">
-            <label for="testimonial">Testimonial:</label>
-            <textarea class="form-control" id="testimonial" name="testimonial" rows="3" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
 
 <!-- Bootstrap Pager -->
 <nav aria-label="Page navigation example" class="mt-3">
@@ -188,7 +178,7 @@
                 <a href="#" class="text-light"><i class="fab fa-instagram fa-lg mx-2"></i></a>
                 <!-- Add more social media icons as needed -->
             </div>
-            
+
     </footer>
 
     <!-- jQuery CDN -->
