--- a/news.html
+++ b/news.html
@@ -32,6 +32,10 @@
             <img src="cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
             
         </a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
         <!-- Add your navigation links, dropdowns, etc. here -->
         <!-- Example: -->
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -147,7 +151,7 @@
                 <!-- Add more social media icons as needed -->
             </div>
 
-            
+
     </footer>
 
     <!-- jQuery CDN -->
