add comment in fans

--- a/Fans.html
+++ b/Fans.html
@@ -146,6 +146,21 @@
 
     <script src="script.js"></script>
 
+     <!-- Testimonials Form -->
+<section id="testimonials" class="container mt-5">
+    <h2>Testimonials</h2>
+    <form action="#" method="post" id="testimonialForm">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="testimonial">Testimonial:</label>
+            <textarea class="form-control" id="testimonial" name="testimonial" rows="3" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
 
 <!-- Bootstrap Pager -->
 <nav aria-label="Page navigation example" class="mt-3">
