Please include the domain name within the title tags of the HTML syntax.

--- a/Fans.html
+++ b/Fans.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football Club</title>
+    <title>Fans page - final-project-delta-eight.vercel.app
+</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
