--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Football Club</title>
+    <title>Football Club - final-project-delta-eight.vercel.app
+</title> <!-- Please include the domain name within the title tags of the HTML syntax. idk if i understand this point rigth -->
     <!-- Bootstrap CSS link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Font Awesome CDN for icons -->
