--- a/Tickets.html
+++ b/Tickets.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>AGD FC Tickets</title>
+    <title>AGD FC Tickets - final-project-delta-eight.vercel.app
+</title>
     <!-- Bootstrap CSS link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Font Awesome CDN for icons -->
