--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football Club</title>
+    <title>about - final-project-delta-eight.vercel.app
+</title>
     <link rel="stylesheet" href="styles.css">
     
     <!-- Bootstrap CSS link -->
