--- a/Fans.html
+++ b/Fans.html
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-white fixed-top">
         <a class="navbar-brand" href="index.html">
             <!-- Link your franchise logo image here -->
-            <img src="cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
+            <img src="images/cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
             
         </a>
 
@@ -76,7 +76,7 @@
                 <!-- Fan 1 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="kidfan.jpeg" class="card-img-top" alt="Fan 1">
+                        <img src="images/kidfan.jpeg" class="card-img-top" alt="Fan 1">
                         <div class="card-body">
                             <h5 class="card-title"></h5>
                             <p class="card-text"> "Meet alex and his son, a dedicated supporter since day one! Her unwavering passion for the team and infectious energy light up every game day."</p>
@@ -86,7 +86,7 @@
                 <!-- Fan 2 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="man.jpeg" class="card-img-top" alt="Fan 2">
+                        <img src="images/man.jpeg" class="card-img-top" alt="Fan 2">
                         <div class="card-body">
                             <h5 class="card-title"></h5>
                             <p class="card-text">"John, our loyal fan, has been following the team for years. His commitment and enthusiasm inspire both players and fellow fans alike."</p>
@@ -96,7 +96,7 @@
                 <!-- Fan 3 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="boyfan.jpeg" class="card-img-top" alt="Fan 3">
+                        <img src="images/boyfan.jpeg" class="card-img-top" alt="Fan 3">
                         <div class="card-body">
                             <h5 class="card-title"></h5>
                             <p class="card-text">"Emily, the ultimate team spirit, embodies the heart and soul of our fan community. Her positive vibes and dedication uplift everyone around her."</p>
@@ -115,22 +115,22 @@
      <div id="imageSlider" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="girlfan.jpeg" class="d-block w-100" alt="Slide 1">
+                <img src="images/girlfan.jpeg" class="d-block w-100" alt="Slide 1">
             </div>
             <div class="carousel-item">
-                <img src="inchada.jpeg" class="d-block w-100" alt="Slide 2">
+                <img src="images/inchada.jpeg" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="court.jpeg" class="d-block w-100" alt="Slide 2">
+                <img src="images/court.jpeg" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="fanssunset.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/fanssunset.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="fondo2.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/fondo2.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="fondo4.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/fondo4.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <!-- Add more slides as needed -->
         </div>
