--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-white fixed-top">
         <a class="navbar-brand" href="index.html">
             <!-- Link your franchise logo image here -->
-            <img src="cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
+            <img src="images/cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
             
         </a>
 
@@ -104,31 +104,31 @@
     <div id="imageSlider" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="cover.png" class="d-block w-100" alt="Slide 1">
+                <img src="images/cover.png" class="d-block w-100" alt="Slide 1">
             </div>
             <div class="carousel-item">
-                <img src="patada.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/patada.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="pelotas.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/pelotas.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="fondo3.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/fondo3.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="cover.png" class="d-block w-100" alt="Slide 2">
+                <img src="images/cover.png" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="fondo.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/fondo.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="equipo.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/equipo.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="fondo1.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/fondo1.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-                <img src="sunset.webp" class="d-block w-100" alt="Slide 2">
+                <img src="images/sunset.webp" class="d-block w-100" alt="Slide 2">
             </div>
             <!-- Add more slides as needed -->
         </div>
