--- a/Tickets.html
+++ b/Tickets.html
@@ -246,7 +246,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-white fixed-top">
         <a class="navbar-brand" href="index.html">
             <!-- Link your franchise logo image here -->
-            <img src="cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
+            <img src="images/cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
         </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
