--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-white fixed-top">
         <a class="navbar-brand" href="index.html">
             <!-- Link your franchise logo image here -->
-            <img src="cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
+            <img src="images/cover.png" alt="Franchise Logo" width="100" height="50" class="d-inline-block align-top">
             
         </a>
 
@@ -109,7 +109,7 @@
                 </div>
     <!-- About Section -->
                 <div class="col-md-6">
-                    <img src="roro.jpg" alt="Football Club Image" class="img-fluid about-image">
+                    <img src="images/roro.jpg" alt="Football Club Image" class="img-fluid about-image">
                 </div>
             </div>
         </div>
